--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="game-container">
     </div>
-    <div class="player-info">
+    <div class="player-info box">
       <div>
         <label for="player-name">Your Name</label>
         <input id="player-name" maxlength="10" type="text" />
